@@ -34,6 +34,7 @@
   * Revised lib/filter to work with counted read lengths.
   * Added (string-replace src pat text) -> str
   ! define's done within a macro don't seem to be bound
+  + Added (xml-escape src) -> dst
 
 - 4/2/2006, HTTP-URL
   * (register-url-parser scheme parser)
